hermes_fuzz_executed_few_shot/fuzz_27_execution
'use strict';

async function fetchWeatherData() {
    var url = `https: 
    var data = await fetch(url).then(x => {
        console.log(x)
    });
}
fetchWeatherData();
console.log(typeof fetchWeatherData)  

const fetchWeatherDataSync = () => { console.log( fetch('http://www.bbc.co.uk/news/health-23936104') ) }  
fetchWeatherDataSync() 

console.log('End of test script.')


Execution Output ------------------:
test.js:16:1: error: non-terminated template literal

^
test.js:4:15: note: template literal started here
    var url = `https: 
              ^
test.js:16:1: error: invalid expression

^
